deploy: 2bd0689e7d8013e6132a7c094d16a005fb6ca341

--- a/genindex.html
+++ b/genindex.html
@@ -143,8 +143,10 @@
       
       <div class="sidebar-sticky"><a class="sidebar-brand" href="index.html">
   
+  <div class="sidebar-logo-container">
+    <img class="sidebar-logo" src="_static/logo.svg" alt="Logo"/>
+  </div>
   
-  <span class="sidebar-brand-text">ChartCraftHub 0.0.1 documentation</span>
   
 </a><form class="sidebar-search-container" method="get" action="search.html" role="search">
   <input class="sidebar-search" placeholder="Search" name="q" aria-label="Search">
