--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
       
       <div class="sidebar-sticky"><a class="sidebar-brand" href="#">
   
+  <div class="sidebar-logo-container">
+    <img class="sidebar-logo" src="_static/logo.svg" alt="Logo"/>
+  </div>
   
-  <span class="sidebar-brand-text">ChartCraftHub 0.0.1 documentation</span>
   
 </a><form class="sidebar-search-container" method="get" action="search.html" role="search">
   <input class="sidebar-search" placeholder="Search" name="q" aria-label="Search">
@@ -196,7 +198,7 @@
           </label>
         </div>
         <article role="main">
-          <img alt="Code, debug, reuse this chart logo" class="align-center" src="_images/logo.svg" /><div class="admonition note">
+          <div class="admonition note">
 <p class="admonition-title">Note</p>
 <p>The project is under active development. The documentation is not complete yet.</p>
 </div>
