add figure part

--- a/src/ChartCraftHub/index_hello.html
+++ b/src/ChartCraftHub/index_hello.html
@@ -17,11 +17,11 @@
 </head>
 <body>
     <div class="hello-world">
-        <h1>Welcome to My Webpage</h1>
+        <h1>Welcome to My HTML</h1>
         <p>This is a simple webpage with text and a figure.</p>
         <p>Could you spot where is the figure?</p>
-        <img src="results/hello_world.png" alt="my figure" width="300" height="300">
-        <p>1.0 2.0 3.5 Hello World! 3 2 1</p>
+        <img src="results/hello_world.svg" alt="my figure" width="432" height="144">
+        <p>1.0 2.0 3.5 The quick brown fox jumps over the lazy dog.</p>
     </div>
 </body>
 </html>
