deploy: d6f403f9a82e5cd973a72949d5eda7e2c718cc05

--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@ With a background in computational physics, Artem’s journey into programming a
 Having previously contributed to projects at EPFL, he remains actively engaged with the research community.
 Artem is a vice chair of EuroPython Society and a one of the organisers of EuroPython and EuroSciPy conferences.
 He resides in Lausanne with his wife and their beloved canine companion.</p>
-<p>Teresa</p>
+<p><strong>Teresa Kubacka</strong> is a data scientist and software engineer with a background in physics and a passion for data visualization.
+She originally contacted Artem with an idea to create a workshop about matplotlib.</p>
 </section>
 
         </article>
