--- a/src/chartcrafthub/index_pangram.html
+++ b/src/chartcrafthub/index_pangram.html
@@ -6,12 +6,13 @@
     <title>First Figure</title>
     <style>
         @font-face {
-            font-family: "cmr10";
-            src: url("fonts/cmr10.ttf");
+            font-family: "Roboto";
+            src: url("fonts/RobotoMono-Regular.ttf");
         }
 
         .hello-world {
-            font-family: "cmr10";
+            font-family: "Roboto";
+            font-size: 16px;
         }
     </style>
 </head>
@@ -20,7 +21,7 @@
         <h1>Welcome to My HTML</h1>
         <p>This is a simple webpage with text and a figure.</p>
         <p>Could you spot where is the figure?</p>
-        <img src="results/hello_world.svg" alt="my figure" width="432" height="144">
+        <img src="results/pangram.svg" alt="my figure" width="576">
         <p>1.0 2.0 3.5 The quick brown fox jumps over the lazy dog.</p>
     </div>
 </body>
