deploy: 1e8baef982be1e936c3d5aca1f017efb1c366d26

--- a/section_2.html
+++ b/section_2.html
@@ -6,7 +6,7 @@
 <link rel="index" title="Index" href="genindex.html" /><link rel="search" title="Search" href="search.html" /><link rel="next" title="3. Creating Portable Tools: Packaging Your Figure Creation Toolbox" href="section_3.html" /><link rel="prev" title="1. Exploring Matplotlib Internals: Figures, Axes, and More" href="section_1.html" />
 
     <!-- Generated with Sphinx 7.2.6 and Furo 2024.01.29 -->
-        <title>2. Efficient Figure Creation Tips: Abstracting Common Steps - ChartCraftHub 0.1.5 documentation</title>
+        <title>2. Efficient Figure Creation Tips: Abstracting Common Steps - ChartCraftHub 1.0.1 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=a746c00c" />
     <link rel="stylesheet" type="text/css" href="_static/styles/furo.css?v=135e06be" />
     <link rel="stylesheet" type="text/css" href="_static/styles/furo-extensions.css?v=36a5483c" />
@@ -123,7 +123,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="index.html"><div class="brand">ChartCraftHub 0.1.5 documentation</div></a>
+      <a href="index.html"><div class="brand">ChartCraftHub 1.0.1 documentation</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -238,7 +238,7 @@ If you are convinced that it’s worth it, there is a second notebook that guide
 <p><strong>Description</strong></p>
 <p>Using the concepts that you’ve acquired, create a “common chart” figure like the one below.</p>
 <figure class="align-center">
-<a class="reference internal image-reference" href="images/dino_ex_2_2.png"><img alt="common_chart_in_xkcd_style" src="images/dino_ex_2_2.png" style="width: 600px;" /></a>
+<a class="reference internal image-reference" href="_images/dino_ex_2_2.png"><img alt="common_chart_in_xkcd_style" src="_images/dino_ex_2_2.png" style="width: 600px;" /></a>
 </figure>
 </section>
 <section id="exercise-3">
@@ -246,7 +246,7 @@ If you are convinced that it’s worth it, there is a second notebook that guide
 <p><strong>Description</strong></p>
 <p>Follow the instructions in the notebook <cite>chapter_2_1.ipynb</cite> to create a figure like the one below.</p>
 <figure class="align-center">
-<a class="reference internal image-reference" href="images/ex_2_3.png"><img alt="sine_waves_with_colors" src="images/ex_2_3.png" style="width: 600px;" /></a>
+<a class="reference internal image-reference" href="_images/ex_2_3.png"><img alt="sine_waves_with_colors" src="_images/ex_2_3.png" style="width: 600px;" /></a>
 </figure>
 </section>
 <section id="exercise-4">
@@ -254,7 +254,7 @@ If you are convinced that it’s worth it, there is a second notebook that guide
 <p><strong>Description</strong></p>
 <p>You will be able to create a figure like the one below with ease.</p>
 <figure class="align-center">
-<a class="reference internal image-reference" href="images/ex_2_4.png"><img alt="a_grid_with_lines" src="images/ex_2_4.png" style="width: 600px;" /></a>
+<a class="reference internal image-reference" href="_images/ex_2_4.png"><img alt="a_grid_with_lines" src="_images/ex_2_4.png" style="width: 600px;" /></a>
 </figure>
 </section>
 <section id="exercise-5">
@@ -263,7 +263,7 @@ If you are convinced that it’s worth it, there is a second notebook that guide
 <p>The concepts similar to those we’ve learned about 2D graphics can be applied to 3D.
 The star in the exercise means that it’s a bit more challenging.</p>
 <figure class="align-center">
-<a class="reference internal image-reference" href="images/ex_2_5.png"><img alt="common_chart_in_xkcd_style" src="images/ex_2_5.png" style="width: 600px;" /></a>
+<a class="reference internal image-reference" href="_images/ex_2_5.png"><img alt="common_chart_in_xkcd_style" src="_images/ex_2_5.png" style="width: 600px;" /></a>
 </figure>
 </section>
 <section id="exercise-6">
@@ -271,7 +271,7 @@ The star in the exercise means that it’s a bit more challenging.</p>
 <p><strong>Description</strong></p>
 <p>We will be able to generate a dyno even in 3D.</p>
 <figure class="align-center">
-<a class="reference internal image-reference" href="images/ex_2_6.png"><img alt="dyno_in_3d" src="images/ex_2_6.png" style="width: 600px;" /></a>
+<a class="reference internal image-reference" href="_images/ex_2_6.png"><img alt="dyno_in_3d" src="_images/ex_2_6.png" style="width: 600px;" /></a>
 </figure>
 </section>
 <section id="exercise-7">
@@ -280,7 +280,7 @@ The star in the exercise means that it’s a bit more challenging.</p>
 <p>It is always a good reminder to use a proper DPI and dimensions for the figure.
 Create a figure to demonstrate the difference between the default and custom DPI.</p>
 <figure class="align-center">
-<a class="reference internal image-reference" href="images/ex_2_7.png"><img alt="common_chart_in_xkcd_style" src="images/ex_2_7.png" style="width: 600px;" /></a>
+<a class="reference internal image-reference" href="_images/ex_2_7.png"><img alt="common_chart_in_xkcd_style" src="_images/ex_2_7.png" style="width: 600px;" /></a>
 </figure>
 </section>
 </section>
@@ -382,7 +382,7 @@ Create a figure to demonstrate the difference between the default and custom DPI
       
     </aside>
   </div>
-</div><script src="_static/documentation_options.js?v=59fadc99"></script>
+</div><script src="_static/documentation_options.js?v=292eb321"></script>
     <script src="_static/doctools.js?v=888ff710"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/scripts/furo.js?v=32e29ea5"></script>
